# applyflow

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
api/: main.py
api/routes/: analytics.py  applications.py  jobs.py  profiles.py
app/: dashboard.py
domain/: application.py  job.py  profile.py  resume.py  scoring.py
infra/: api_service.tf  ec2.tf  ecr.tf  ecs.tf  eventbridge.tf  iam.tf  main.tf  monitoring.tf  outputs.tf  rds.tf  s3.tf  terraform.tfstate  userdata.sh  variables.tf
infrastructure/: database.py  repositories.py
monitoring/: metrics.py
services/: parser.py
services/collectors/: base.py  greenhouse.py  lever.py  remotive.py  rss.py
tests/unit/: test_parser.py  test_scoring.py
workers/: ingestion_worker.py
